syntax = "proto3";

import "types/task.proto";

package todo;

service TodoService {
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse);
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc AddTask (AddTaskRequest) returns (AddTaskResponse);
  rpc UpdateSubject (UpdateSubjectRequest) returns (UpdateSubjectResponse);
  rpc UpdateStatus (UpdateStatusRequest) returns (UpdateStatusResponse);
}

// Health check
message HealthCheckRequest {}

message HealthCheckResponse {
  repeated string error = 1;
}

// Create task
message CreateRequest {
  Subject subject = 1;
}

message CreateResponse {
  string subjectId = 1;
  Subject subject = 2;
}

// Add task
message AddTaskRequest {
  string parent_id = 1;
  Task task = 2;
}

message AddTaskResponse {
  string subject_id = 1;
  Subject subject = 2;
}

// Update task
message UpdateSubjectRequest {
  string subject_id = 1;
  Subject subject = 2;
}

message UpdateSubjectResponse {
  string subject_id = 1;
  Subject subject = 2;
}


// Update status
message UpdateStatusRequest {
  string task_id = 1;
  Status status = 2;
}

message UpdateStatusResponse {
  string task_id = 1;
  Status status = 2;
}
