syntax = "proto3";

enum Priority {
    URGENT = 0;
    HIGH = 1;
    MEDIUM = 2;
    LOW = 3;
}

enum Status {
    DONE = 0;
    IN_PROGRESS = 1;
    TO_DO = 2;
}

message Subject {
  string id = 1;
  string name = 2;
  string description = 3;
  Priority priority = 4;
  Status status = 5;
  repeated Task task = 6;
  uint32 start_date = 7;
  uint32 end_date = 8;
  string user_id = 9;
}

message SubjectCreateRequest {
  string name = 1;
  string description = 2;
  Priority priority = 3;
  Status status = 4;
  repeated Task task = 5;
  uint32 start_date = 6;
  uint32 end_date = 7;
  string user_id = 8;
}

message Task {
  string id = 1;
  string name = 2;
  string description = 3;
  Priority priority = 4;
  Status status = 5;
  repeated Task task = 6;
  uint32 start_date = 7;
  uint32 end_date = 8;
}

message TaskCreateRequest {
  string name = 1;
  string description = 2;
  Priority priority = 3;
  Status status = 4;
  repeated Task task = 5;
  uint32 start_date = 6;
  uint32 end_date = 7;
}
